- Updated CSS definition for widgets to avoid overflow only for WP Statistics widgets instead of all active widgets.

--- a/assets/css/log.css
+++ b/assets/css/log.css
@@ -227,7 +227,30 @@
 .log-url img {
 }
 
-.postbox {
+#wp_statistics_editor_meta_box,
+#wp-statistics-browsers-widget,
+#wp-statistics-countries-widget,
+#wp-statistics-hitsmap-widget,
+#wp-statistics-hits-widget,
+#wp-statistics-pages-widget,
+#wp-statistics-recent-widget,
+#wp-statistics-referring-widget,
+#wp-statistics-search-widget,
+#wp-statistics-summary-widget,
+#wp-statistics-words-widget,
+#wp-statistics-top-visitors-widget,
+#wps_hits_postbox,
+#wps_top_visitors_postbox,
+#wps_search_postbox,
+#wps_words_postbox,
+#wps_recent_postbox,
+#wps_map_postbox,
+#wps_pages_postbox,
+#wps_summary_postbox,
+#wps_browsers_postbox,
+#wps_referring_postbox,
+#wps_countries_postbox
+{
 	overflow: hidden;
 }
 
